fix: promo title-align to center

--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -19,6 +19,7 @@
   font-size: 50px;
   line-height: 58px;
   font-weight: 400;
+  text-align: center;
   
   max-width: 730px;
   max-height: 116px;
